# pydantic-tutorial

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/src/pydantic_tutorial/: models.py  settings.py
app/tests/pydantic_tutorial/: test_models.py
